--- a/index.html
+++ b/index.html
@@ -1,26 +1,51 @@
-<header>
-    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="index.css">
- </header>
- 
- <h1>Animation Buttons</h1>
- <p>Hover us and enjoy the satisfying neumorphic animation designs!</p>
- <div class="frame">
-   <button class="custom-btn btn-1">Read More</button>
-   <button class="custom-btn btn-2">Read More</button>
-   <button class="custom-btn btn-3"><span>Read More</span></button>
-   <button class="custom-btn btn-4"><span>Read More</span></button>
-   <button class="custom-btn btn-5"><span>Read More</span></button>
-   <button class="custom-btn btn-6"><span>Read More</span></button>
-   <button class="custom-btn btn-7"><span>Read More</span></button>
-   <button class="custom-btn btn-8"><span>Read More</span></button>
-   <button class="custom-btn btn-9">Read More</button>
-   <button class="custom-btn btn-10">Read More</button>
-   <button class="custom-btn btn-11">Read More<div class="dot"></div></button>
-   <button class="custom-btn btn-12"><span>Click!</span><span>Read More</span></button>
-   <button class="custom-btn btn-13">Read More</button>
-   <button class="custom-btn btn-14">Read More</button>
-   <button class="custom-btn btn-15">Read More</button>
-   <button class="custom-btn btn-16">Read More</button>
- </div>
- 
+<!-- <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet"> -->
+<link rel="stylesheet" href="index.css" />
+
+<h1>Animation</h1>
+<div class="frame">
+  <button class="custom-btn btn-1">Read More</button>
+  <button class="custom-btn btn-2">Read More</button>
+  <button class="custom-btn btn-3"><span>Read More</span></button>
+  <button class="custom-btn btn-4"><span>Read More</span></button>
+  <button class="custom-btn btn-5"><span>Read More</span></button>
+  <button class="custom-btn btn-6"><span>Read More</span></button>
+  <button class="custom-btn btn-7"><span>Read More</span></button>
+  <button class="custom-btn btn-8"><span>Read More</span></button>
+  <button class="custom-btn btn-9">Read More</button>
+  <button class="custom-btn btn-10">Read More</button>
+  <button class="custom-btn btn-11">
+    Read More
+    <div class="dot"></div>
+  </button>
+  <button class="custom-btn btn-12">
+    <span>Click!</span><span>Read More</span>
+  </button>
+  <button class="custom-btn btn-13">Read More</button>
+  <button class="custom-btn btn-14">Read More</button>
+  <button class="custom-btn btn-15">Read More</button>
+  <button class="custom-btn btn-16">Read More</button>
+</div>
+
+<!-- box shadow -->
+<div class="buttons">
+  <h1>Simple hover effects with <code>box-shadow</code></h1>
+  <button class="fill">Fill In</button>
+  <button class="pulse">Pulse</button>
+  <button class="close">Close</button>
+  <button class="raise">Raise</button>
+  <button class="up">Fill Up</button>
+  <button class="slide">Slide</button>
+  <button class="offset">Offset</button>
+</div>
+
+<!-- button hover -->
+<div class="hover__button">
+  <h1>Hover button</h1>
+  <div class="container">
+    <a class="btn btn-1">Hover me</a>
+    <a class="btn btn-2">Hover me</a>
+    <a class="btn btn-3">Hover me</a>
+    <a class="btn btn-4">Hover me</a>
+    <a class="btn btn-5">Hover me</a>
+  </div>
+</div>
