update button check box

--- a/index.html
+++ b/index.html
@@ -160,7 +160,10 @@
   <a href="http://themonkey.co" class="button2 b-blue rot-135">Blue button</a>
 </div>
 <footer>
-  <a href="http://themonkey.co" class="button b-red" target="_blank"
-    >By Monkey Company</a
+  <a
+    href=" https://www.facebook.com/duonglovehanh"
+    class="button b-red"
+    target="_blank"
+    >By Duong A Developer</a
   >
 </footer>
