--- a/index.html
+++ b/index.html
@@ -145,21 +145,25 @@
   rel="stylesheet"
 />
 <div class="ctn">
-  <a href="http://themonkey.co" class="button b-green">Green Button</a>
-  <a href="http://themonkey.co" class="button b-pink">Pink Button</a>
-  <a href="http://themonkey.co" class="button b-red">Red Button</a>
-  <a href="http://themonkey.co" class="button b-orange">Orange Button</a>
-  <a href="http://themonkey.co" class="button b-blue">Blue Button</a>
+  <a href="#" class="button b-green">Green Button</a>
+  <a href="#" class="button b-pink">Pink Button</a>
+  <a href="#" class="button b-red">Red Button</a>
+  <a href="#" class="button b-orange">Orange Button</a>
+  <a href="#" class="button b-blue">Blue Button</a>
   <br />
-  <a href="http://themonkey.co" class="button2 b-green rot-135">Green button</a>
-  <a href="http://themonkey.co" class="button2 b-pink rot-135">Pink button</a>
-  <a href="http://themonkey.co" class="button2 b-red rot-135">Red button</a>
-  <a href="http://themonkey.co" class="button2 b-orange rot-135"
-    >Orange button</a
-  >
-  <a href="http://themonkey.co" class="button2 b-blue rot-135">Blue button</a>
+  <a href="#" class="button2 b-green rot-135">Green button</a>
+  <a href="#" class="button2 b-pink rot-135">Pink button</a>
+  <a href="#" class="button2 b-red rot-135">Red button</a>
+  <a href="#" class="button2 b-orange rot-135">Orange button</a>
+  <a href="#" class="button2 b-blue rot-135">Blue button</a>
 </div>
 <footer>
+  <a
+    href="https://www.youtube.com/watch?v=elwqvNykS94&ab_channel=T%C4%90Gaming"
+    class="button b-red"
+    target="_blank"
+    >Đừng nhấn nút này</a
+  >
   <a
     href=" https://www.facebook.com/duonglovehanh"
     class="button b-red"
@@ -167,3 +171,4 @@
     >By Duong A Developer</a
   >
 </footer>
+
